--- a/ConsoleApplication2.vcxproj
+++ b/ConsoleApplication2.vcxproj
@@ -123,7 +123,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="ConsoleApplication2.cpp" />
+    <ClCompile Include="main.cpp" />
     <ClCompile Include="constants.cpp" />
   </ItemGroup>
   <ItemGroup>
